--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,13 @@
 </head>
 <body>
 
-<%= yield %>
+<h1>Practice Blogger App</h1>
 
+<section class="sidebar">
+	
+</section>
+<section class="content">
+	<%= yield %>
+</section>
 </body>
 </html>
