--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,13 @@
 <h1>Practice Blogger App</h1>
 
 <section class="sidebar">
-	
+	<ul>
+		<% @subjects.each do |subject| %>
+		<li>
+			<%= link_to subject.name, subject_path(subject) %>
+		</li>
+		<% end %>
+	</ul>
 </section>
 <section class="content">
 	<%= yield %>
