--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,4 +1,4 @@
-<%= @subject.articles.each do |article| %>
-	<h2><%= article.title %></h2>
+<% @subject.articles.each do |article| %>
+	<h2><%= link_to article.title, article %></h2>
 	<p><%= article.summary %></p>
 <% end %>
