--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -3,3 +3,5 @@
 <%= form_for [:admin, @article] do |f| %>
 	<%= render partial: 'form', locals: {f: f} %>
 <% end %>
+
+<%= link_to "Add new section", [:admin, :new, :sections] %>
