--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -4,4 +4,4 @@
 	<%= render partial: 'form', locals: {f: f} %>
 <% end %>
 
-<%= link_to "Add new section", [:admin, :new, :sections] %>
+<%= link_to "Add new section", [:new, :admin, @article, :section] %>
