--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
 	<div id="header">
 		<h1>Practice Blogger App</h1>
+		<%= link_to "Edit Subjects", admin_subjects_path %>
 	</div>
 
 	<section id="sidebar">
