Add edit sections links

--- a/app/views/admin/subjects/show.html.erb
+++ b/app/views/admin/subjects/show.html.erb
@@ -7,6 +7,7 @@
 		<tr>
 			<td><%= article.title %></td>
 			<td><%= link_to "Edit", [:edit, :admin, article] %></td>
+			<td><%= link_to "Sections", [:admin, article] %></td>
 		</tr>
 	<% end %>
 </table>
