--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
 	<div id="header">
 		<h1>Practice Blogger App</h1>
 		<%= link_to "Edit Subjects", admin_subjects_path %>
+    <%= link_to "Sign up", sign_up_path %>
+    <%= link_to "Sign in", sign_in_path %>
+    <%= link_to "Sign out", sign_out_path %>
 	</div>
 
 	<section id="sidebar">
@@ -26,6 +29,10 @@
 	</section>
 
 	<section id="content">
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, id: name %>  
+    <% end %>
+    
 		<%= yield %>
 	</section>
 
