--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,14 @@
 
 	<div id="header">
 		<h1>Practice Blogger App</h1>
-		<%= link_to "Edit Subjects", admin_subjects_path %>
     <%= link_to "Sign up", sign_up_path %>
-    <%= link_to "Sign in", sign_in_path %>
-    <%= link_to "Sign out", sign_out_path %>
+    <% if current_user %>
+      <%= link_to "Sign out", sign_out_path %>
+    <% else %>
+      <%= link_to "Sign in", sign_in_path %>
+    <% end %>
+		<%= link_to "Edit Subjects", admin_subjects_path %>
+
 	</div>
 
 	<section id="sidebar">
