--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,10 @@
     <%= link_to "Sign up", sign_up_path %>
     <% if current_user %>
       <%= link_to "Sign out", sign_out_path %>
-      <%= link_to "Edit Subjects", admin_subjects_path %>
     <% else %>
       <%= link_to "Sign in", sign_in_path %>
     <% end %>
+    <%= link_to("Edit Subjects", admin_subjects_path) if current_user.try(:admin) %>
 
 	</div>
 
