Articles form sets user_id

--- a/app/views/admin/articles/_form.html.erb
+++ b/app/views/admin/articles/_form.html.erb
@@ -7,4 +7,6 @@
 <%= f.label :subject %> <br>
 <%= f.select :subject_id, Subject.all.map { |s| [s.name, s.id] } %> <br> <br>
 
+<%= f.hidden_field :user_id, value: current_user.id %>
+
 <%= f.submit %>
