Articles show the author's email

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,5 @@
 <h2><%= @article.title %></h2>
+<h6>Author: <%= @article.user.email %></h6>
 
 <% @article.sections.each do |section| %>
 	<p><%= section.content %></p>
