Change admin edit links and form for articles

--- a/app/views/admin/subjects/_form.html.erb
+++ b/app/views/admin/subjects/_form.html.erb
@@ -1,4 +1,11 @@
-<%= f.label :name %> <br>
-<%= f.text_field :name %> <br> <br>
+<p>
+  <%= f.label :name %>
+</p>
+
+<p>
+  <%= f.text_field :name %>
+</p>
+
+<%# later, can add nested attributes to alter sections inline, right here %>
 
 <%= f.submit %>
