--- a/app/views/admin/articles/show.html.erb
+++ b/app/views/admin/articles/show.html.erb
@@ -1,8 +1,10 @@
 <table>
-	<tr>
-		<th>Section</th>
-		<th>Actions</th>
-	</tr>
+  <thead>
+    <tr>
+      <th>Section</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
 
 	<% @article.sections.each do |section| %>
 		<tr>
