--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -1,14 +1,20 @@
 <table>
-	<tr>
-		<th>Subject Name</th>
-		<th>Actions</th>
-	</tr>
+  <thead>
+    <tr>
+      <th>Subject Name</th>
+      <th colspan="3">Actions</th>
+    </tr>
+  </thead>
 	<% @subjects.each do |subject| %>
 		<tr>
 			<td><%= subject.name %></td>
 			<td>
         <%= link_to "Rename", [:edit, :admin, subject] %>
+      </td>
+      <td>
         <%= link_to "Manage Articles", [:admin, subject] %>
+      </td>
+      <td>
         <%= link_to "Delete", [:admin, subject], confirm: "Are you sure?", method: :delete %>
 			</td>
 		</tr>
