Actually install bootstrap

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,4 +1,4 @@
-$blue-bg: #5A6E82;
+/* $blue-bg: #5A6E82;
 $minty-green: #739B79;
 $ivory: #CDD7F5;
 $header-grey: #78736E;
@@ -70,4 +70,4 @@ table {
 td, th {
   border: 1px black solid;
   padding: 8px;
-}
+} */
