--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,17 +1,21 @@
-<h1>Welcome to this app</h1>
+<div class="col-sm-8 col-sm-offset-2">
+  <div class="page-header">
+    <h1>Welcome to this app</h1>
+  </div>
 
-<p>Just gonna type some crap to fill up a wee bit of space. Hopefully I get a cool laylout/page/wahetevr yu pros call it. I dont like how you need content to make the content box fill up. I probably need something simple like a min-height attribute to keep it at an acceptable height but I dont feel like going there right now.</p>
+  <p>Just gonna type some crap to fill up a wee bit of space. Hopefully I get a cool laylout/page/wahetevr yu pros call it. I dont like how you need content to make the content box fill up. I probably need something simple like a min-height attribute to keep it at an acceptable height but I dont feel like going there right now.</p>
 
-<p>For right now, I'll just focus on the backend work because thats what I'm trying to learn. Then, When I get the app all nice and powerful, I'll spruce it up a little (or a lot) with some swaggification. </p>
+  <p>For right now, I'll just focus on the backend work because thats what I'm trying to learn. Then, When I get the app all nice and powerful, I'll spruce it up a little (or a lot) with some swaggification. </p>
 
-<p>Just gonna type some crap to fill up a wee bit of space. Hopefully I get a cool laylout/page/wahetevr yu pros call it. I dont like how you need content to make the content box fill up. I probably need something simple like a min-height attribute to keep it at an acceptable height but I dont feel like going there right now.</p>
+  <p>Just gonna type some crap to fill up a wee bit of space. Hopefully I get a cool laylout/page/wahetevr yu pros call it. I dont like how you need content to make the content box fill up. I probably need something simple like a min-height attribute to keep it at an acceptable height but I dont feel like going there right now.</p>
 
-<p>For right now, I'll just focus on the backend work because thats what I'm trying to learn. Then, When I get the app all nice and powerful, I'll spruce it up a little (or a lot) with some swaggification. </p>
+  <p>For right now, I'll just focus on the backend work because thats what I'm trying to learn. Then, When I get the app all nice and powerful, I'll spruce it up a little (or a lot) with some swaggification. </p>
 
-<p>Just gonna type some crap to fill up a wee bit of space. Hopefully I get a cool laylout/page/wahetevr yu pros call it. I dont like how you need content to make the content box fill up. I probably need something simple like a min-height attribute to keep it at an acceptable height but I dont feel like going there right now.</p>
+  <p>Just gonna type some crap to fill up a wee bit of space. Hopefully I get a cool laylout/page/wahetevr yu pros call it. I dont like how you need content to make the content box fill up. I probably need something simple like a min-height attribute to keep it at an acceptable height but I dont feel like going there right now.</p>
 
-<p>For right now, I'll just focus on the backend work because thats what I'm trying to learn. Then, When I get the app all nice and powerful, I'll spruce it up a little (or a lot) with some swaggification. </p>
+  <p>For right now, I'll just focus on the backend work because thats what I'm trying to learn. Then, When I get the app all nice and powerful, I'll spruce it up a little (or a lot) with some swaggification. </p>
 
-<p>Just gonna type some crap to fill up a wee bit of space. Hopefully I get a cool laylout/page/wahetevr yu pros call it. I dont like how you need content to make the content box fill up. I probably need something simple like a min-height attribute to keep it at an acceptable height but I dont feel like going there right now.</p>
+  <p>Just gonna type some crap to fill up a wee bit of space. Hopefully I get a cool laylout/page/wahetevr yu pros call it. I dont like how you need content to make the content box fill up. I probably need something simple like a min-height attribute to keep it at an acceptable height but I dont feel like going there right now.</p>
 
-<p>For right now, I'll just focus on the backend work because thats what I'm trying to learn. Then, When I get the app all nice and powerful, I'll spruce it up a little (or a lot) with some swaggification. </p>
+  <p>For right now, I'll just focus on the backend work because thats what I'm trying to learn. Then, When I get the app all nice and powerful, I'll spruce it up a little (or a lot) with some swaggification. </p>
+</div>
