--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -1,7 +1,15 @@
-<%= render partial: 'shared/errors', locals: {object: @article} %>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+    <%= render partial: 'shared/errors', locals: {object: @article} %>
+  </div>
+</div>
 
-<%= form_for [:admin, @article] do |f| %>
-	<%= render partial: 'form', locals: {f: f} %>
-<% end %>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+    <%= form_for [:admin, @article] do |f| %>
+      <%= render partial: 'form', locals: {f: f} %>
+    <% end %>
+  </div>
+</div>
 
 <%= link_to "Add new section", [:new, :admin, @article, :section] %>
