--- a/app/views/admin/sections/_form.html.erb
+++ b/app/views/admin/sections/_form.html.erb
@@ -1,4 +1,7 @@
 <%= f.hidden_field :article_id, value: params[:article_id] %>
 
-<%= f.text_area :content %> <br> 
-<%= f.submit %>
+<div class="form-group">
+  <%= f.text_area :content, class: "form-control" %>
+</div>
+
+<%= f.submit class: "btn btn-default" %>
