--- a/app/views/admin/subjects/_form.html.erb
+++ b/app/views/admin/subjects/_form.html.erb
@@ -1,11 +1,8 @@
-<p>
+<div class="form-group">
   <%= f.label :name %>
-</p>
-
-<p>
-  <%= f.text_field :name %>
-</p>
+  <%= f.text_field :name, class: "form-control" %>
+</div>
 
 <%# later, can add nested attributes to alter sections inline, right here %>
 
-<%= f.submit %>
+<%= f.submit class: "btn btn-default" %>
