--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -1,24 +1,29 @@
-<table>
-  <thead>
-    <tr>
-      <th>Subject Name</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-	<% @subjects.each do |subject| %>
-		<tr>
-			<td><%= subject.name %></td>
-			<td>
-        <%= link_to "Rename", [:edit, :admin, subject] %>
-      </td>
-      <td>
-        <%= link_to "Manage Articles", [:admin, subject] %>
-      </td>
-      <td>
-        <%= link_to "Delete", [:admin, subject], confirm: "Are you sure?", method: :delete %>
-			</td>
-		</tr>
-	<% end %>
-</table>
-
-<%= link_to "New subject", new_admin_subject_path %>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Subject Name</th>
+          <th colspan="3">Actions</th>
+        </tr>
+      </thead>
+      <% @subjects.each do |subject| %>
+        <tr>
+          <td><%= subject.name %></td>
+          <td>
+            <%= link_to "Rename", [:edit, :admin, subject] %>
+          </td>
+          <td>
+            <%= link_to "Manage Articles", [:admin, subject] %>
+          </td>
+          <td>
+            <%= link_to "Delete", [:admin, subject], confirm: "Are you sure?", method: :delete %>
+          </td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
+</div>
+<div class="row">
+  <%= link_to "New subject", new_admin_subject_path, class: "col-sm-1 col-sm-offset-3 btn btn-default" %>
+</div>
