--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,4 +1,8 @@
-<% @subject.articles.each do |article| %>
-	<h2><%= link_to article.title, article %></h2>
-	<p><%= article.summary %></p>
-<% end %>
+<ul class="list-group col-sm-4">
+  <% @subject.articles.each do |article| %>
+    <%= link_to article, class: "list-group-item" do %>
+      <h4><%= article.title %></h2>
+      <p><%= article.summary %></p>
+    <% end %>
+  <% end %>
+</ul>
