--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,7 @@
-<h1>Sign up!</h1>
-
 <%= render partial: 'shared/errors', locals: {object: @user} %>
 
 <%= form_for @user do |f| %>
+  <%= render partial: 'form', locals: {f: f} %>
 
-<p>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-</p>
-  
-<p>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-</p>
-
-<p>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-</p>
-
-  <%= f.submit %>
+  <%= f.submit "Sign up", class: "btn btn-default" %>
 <% end %>
