--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,6 +22,9 @@
           <%= link_to "Sign in", sign_in_path %>
           <% end %>
         </li>
+        <% if author? %>
+          <%= link_to "Write Article", new_article_path %>
+        <% end %>
         <% if current_user.try(:admin) %>
           <li><%= link_to("Admin area", admin_subjects_path) %></li>
         <% end %>
