--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,8 +1,11 @@
 <ul class="list-group col-sm-4">
   <% @subject.articles.each do |article| %>
-    <%= link_to article, class: "list-group-item" do %>
-      <h4><%= article.title %></h2>
+    <%= content_tag :div, class: "list-group-item", id: article.title.parameterize do %>
+      <h4><%= link_to article.title, article %></h2>
       <p><%= article.summary %></p>
+      <% if permit? "articles", "edit", article %>
+        <%= link_to "Edit", edit_article_path(article) %>
+      <% end %>
     <% end %>
   <% end %>
 </ul>
