--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,6 +25,7 @@
         <% end %>
         <% if current_user.try(:admin) %>
           <li><%= link_to("Admin area", admin_subjects_path) %></li>
+          <li><%= link_to("Users list", admin_users_path) %></li>
         <% end %>
         
         <li class="dropdown">
